[package]
name = "tasker"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
chrono = { version = "0.4.31", features = ["serde"] }
regex = { version = "1.10.2", features = [] }
serde = { version = "1.0.193", features = ["derive", "serde_derive"] }
serde_json = "1.0.108"

[dependencies.uuid]
version = "1.6.1"
features = ["v4", "serde"]
